--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,4 +27,5 @@ jobs:
           flake8 slidesense --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 slidesense --count --max-complexity=10 --max-line-length=127 --statistics
       - name: Run tests
-        run: python manage.py test
+        run: |
+          python manage.py test
