--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,4 +28,5 @@ jobs:
           flake8 slidesense --count --max-complexity=10 --max-line-length=127 --statistics
       - name: Run tests
         run: |
+          cd ./slidesense
           python manage.py test
