--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,10 +14,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up Python 3.13
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.13"
+      #- name: Set up Python 3.13
+      #  uses: actions/setup-python@v3
+      #  with:
+      #    python-version: "3.13"
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
@@ -27,5 +27,5 @@ jobs:
           flake8 slidesense --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 slidesense --count --max-complexity=10 --max-line-length=127 --statistics
       - name: Run tests
-        run: |
-          python ./slidesense/manage.py test
+        run: |          
+          python slidesense/manage.py test
