--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,14 +14,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      #- name: Set up Python 3.13
-      #  uses: actions/setup-python@v3
-      #  with:
-      #    python-version: "3.13"
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install flake8
       - name: Lint with flake8
         run: |
           flake8 slidesense --count --select=E9,F63,F7,F82 --show-source --statistics
