--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,11 +18,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install flake8
       - name: Lint with flake8
         run: |
           flake8 slidesense --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 slidesense --count --max-complexity=10 --max-line-length=127 --statistics
       - name: Run tests
         run: |          
-          python slidesense/manage.py test
+          cd ./slidesense
+          coverage run manage.py test slidesense_app && coverage report
